--- a/public/config/config.json
+++ b/public/config/config.json
@@ -9,9 +9,9 @@
   "NFT_NAME": "Blockchain Miners",
   "SYMBOL": "BMC",
   "MAX_SUPPLY": 11111,
-  "WEI_COST": 75000000000000000,
+  "WEI_COST": 70000000000000000,
   "DISPLAY_COST": 0.07,
-  "GAS_LIMIT": 46123088,
+  "GAS_LIMIT": 500000,
   "MARKETPLACE": "Opeansea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/BlockchainMiners",
   "SHOW_BACKGROUND": true
