--- a/public/config/config.json
+++ b/public/config/config.json
@@ -6,14 +6,14 @@
     "SYMBOL": "ETH",
     "ID": 1
   },
-  "NFT_NAME": "Blockchain Miners Club",
+  "NFT_NAME": "Blockchain_Miners_Club",
   "SYMBOL": "BMC",
   "MAX_SUPPLY": 11111,
   "WEI_COST": 70000000000000000,
   "DISPLAY_COST": 0.07,
   "GAS_LIMIT": 500000,
-  "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/BlockchainMiners",
+  "MARKETPLACE": "Opensea",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/Blockchain_Miners_Club",
   "SHOW_BACKGROUND": true
 }
 
