--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.8.0",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
