--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-number-format": "^4.8.0",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2",
