--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,12 +1,12 @@
 {
-  "CONTRACT_ADDRESS": "0x59607FcD0A5187cc6360291075B8dcf0eA22D880",
-  "ULTRA_MINER_CONTRACT_ADDRESS": "0xDe9eA6d2b2ea0961a9c170621363852fEEc82851",
-  "SCAN_LINK": "https://rinkeby.etherscan.io/address/0x59607FcD0A5187cc6360291075B8dcf0eA22D880",
-  "BASE_ASSET_URL": "https://testnets-api.opensea.io/api/v1/assets",
+  "CONTRACT_ADDRESS": "0x47Bd71b482B27eBDb57af6e372cab46c7280bf44",
+  "ULTRA_MINER_CONTRACT_ADDRESS": "0x0c6822ca73de6871f27acd9ca05a05b99294b805",
+  "HASH_POWER_CONTRACT_ADDRESS": "",
+  "ASSET_URL": "https://api.opensea.io/api/v1/assets",
   "NETWORK": {
-    "NAME": "Rinkeby",
+    "NAME": "Mainnet",
     "SYMBOL": "ETH",
-    "ID": 4
+    "ID": 1
   },
   "NFT_NAME": "Blockchain Miners",
   "SYMBOL": "BMC",
